* adding internet address and port * introducing method to send all input to database

--- a/app/src/main/res/layout/activity_database.xml
+++ b/app/src/main/res/layout/activity_database.xml
@@ -25,12 +25,12 @@
             android:hint="Person" />
 
         <EditText
-            android:id="@+id/editTextInternetAddress"
+            android:id="@+id/editTextWebAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:hint="Web address" />
+            android:hint="Internet address" />
 
         <LinearLayout
             android:layout_width="match_parent"
