--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,9 +37,10 @@
                 android:layout_height="wrap_content"
                 android:layout_column="1"
                 android:textSize="20dp"
-                android:text="Total Income" />
+                android:text="Total income" />
 
             <TextView
+                android:id="@+id/textViewTotalIncome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
@@ -52,9 +53,10 @@
                 android:layout_height="wrap_content"
                 android:layout_column="1"
                 android:textSize="20dp"
-                android:text="Total Spending" />
+                android:text="Total spending" />
 
             <TextView
+                android:id="@+id/textViewTotalExpense"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
@@ -70,48 +72,47 @@
                 android:layout_height="wrap_content"
                 android:layout_column="1"
                 android:textSize="20dp"
-                android:text="Savings" />
+                android:text="Total savings" />
 
             <TextView
+                android:id="@+id/textViewTotalSavings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
                 android:textSize="20dp" />
         </TableRow>
 
-        <TableRow>
+<!--        <TableRow>-->
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_column="1"-->
+<!--                android:textSize="20dp"-->
+<!--                android:text="Basis Food/Month" />-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:textSize="20dp"
-                android:text="Basis Food/Month" />
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_column="2"-->
+<!--                android:textSize="20dp" />-->
+<!--        </TableRow>-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:textSize="20dp" />
-        </TableRow>
+<!--        <TableRow-->
+<!--            android:layout_width="fill_parent"-->
+<!--            android:layout_height="fill_parent">-->
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_column="1"-->
+<!--                android:textSize="20dp"-->
+<!--                android:text="Reserve Food/Month" />-->
 
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:textSize="20dp"
-                android:text="Reserve Food/Month" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:textSize="20dp" />
-        </TableRow>
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_column="2"-->
+<!--                android:textSize="20dp" />-->
+<!--        </TableRow>-->
 
         <TableRow>
             <TextView
@@ -122,57 +123,57 @@
                 android:text="Food Ø Spending/Day" />
 
             <TextView
+                android:id="@+id/textViewTotalFood"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
                 android:textSize="20dp" />
         </TableRow>
 
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:textSize="20dp"
-                android:text="Reserve Ø Fod/Day" />
+<!--        <TableRow>-->
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_column="1"-->
+<!--                android:textSize="20dp"-->
+<!--                android:text="Reserve Ø Fod/Day" />-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:textSize="20dp" />
-        </TableRow>
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_column="2"-->
+<!--                android:textSize="20dp" />-->
+<!--        </TableRow>-->
 
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:textSize="20dp"
-                android:text="Food (Beg. month)" />
+<!--        <TableRow>-->
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_column="1"-->
+<!--                android:textSize="20dp"-->
+<!--                android:text="Food (Beg. month)" />-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:textSize="20dp" />
-        </TableRow>
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_column="2"-->
+<!--                android:textSize="20dp" />-->
+<!--        </TableRow>-->
 
-        <TableRow>
+<!--        <TableRow>-->
+<!--            <TextView-->
+<!--                android:layout_width="137dp"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_column="1"-->
+<!--                android:textSize="20dp"-->
+<!--                android:text="Food (Beg. year)" />-->
 
-            <TextView
-                android:layout_width="137dp"
-                android:layout_height="match_parent"
-                android:layout_column="1"
-                android:textSize="20dp"
-                android:text="Food (Beg. year)" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:textSize="20dp" />
-        </TableRow>
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_column="2"-->
+<!--                android:textSize="20dp" />-->
+<!--        </TableRow>-->
 
         <!--From here new TableLayout-->
         <View
@@ -204,9 +205,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
-                android:hint="€"
+                android:text="0"
                 android:textSize="20dp"
-                android:inputType="number" />
+                android:inputType="numberDecimal" />
         </TableRow>
 
         <TableRow>
@@ -222,9 +223,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
-                android:hint="€"
+                android:text="0"
                 android:textSize="20dp"
-                android:inputType="number" />
+                android:inputType="numberDecimal" />
         </TableRow>
 
         <TableRow
@@ -282,7 +283,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
-                android:hint="Date (dd.mm.yyyy)"
+                android:hint="Date (dd-mm-yyyy)"
                 android:textSize="20dp"
                 android:inputType="date" />
         </TableRow>
@@ -291,7 +292,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
 
-            <FrameLayout
+<!--            <FrameLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -303,7 +304,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     app:srcCompat="@drawable/ic_baseline_delete_24" />
-            </FrameLayout>
+            </FrameLayout>-->
 
             <FrameLayout
                 android:layout_width="0dp"
