--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
                 android:id="@+id/textViewTotalIncome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@android:color/holo_green_light"
                 android:layout_column="2"
                 android:textSize="20dp" />
         </TableRow>
@@ -59,6 +60,7 @@
                 android:id="@+id/textViewTotalExpense"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@android:color/holo_red_light"
                 android:layout_column="2"
                 android:textSize="20dp" />
         </TableRow>
@@ -78,6 +80,7 @@
                 android:id="@+id/textViewTotalSavings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@android:color/holo_blue_light"
                 android:layout_column="2"
                 android:textSize="20dp" />
         </TableRow>
@@ -126,6 +129,7 @@
                 android:id="@+id/textViewTotalFood"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@android:color/holo_orange_light"
                 android:layout_column="2"
                 android:textSize="20dp" />
         </TableRow>
@@ -239,14 +243,21 @@
                 android:textSize="20dp"
                 android:hint="Person" />
 
-            <EditText
-                android:id="@+id/editTextPerson"
+            <Spinner
+                android:id="@+id/spinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:hint="First name"
-                android:textSize="20dp"
-                android:inputType="text" />
+                android:background="@android:drawable/btn_dropdown"
+                android:spinnerMode="dropdown"/>
+
+<!--            <EditText-->
+<!--                android:id="@+id/editTextPerson"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_column="2"-->
+<!--                android:hint="First name"-->
+<!--                android:textSize="20dp"-->
+<!--                android:inputType="text" />-->
         </TableRow>
 
         <TableRow>
@@ -257,14 +268,21 @@
                 android:textSize="20dp"
                 android:hint="Location" />
 
-            <EditText
-                android:id="@+id/editTextLocation"
+            <Spinner
+                android:id="@+id/spinnerLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:hint="Location"
-                android:textSize="20dp"
-                android:inputType="text" />
+                android:background="@android:drawable/btn_dropdown"
+                android:spinnerMode="dropdown"/>
+
+<!--            <EditText-->
+<!--                android:id="@+id/editTextLocation"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_column="2"-->
+<!--                android:hint="Location"-->
+<!--                android:textSize="20dp"-->
+<!--                android:inputType="text" />-->
         </TableRow>
 
         <TableRow
