--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -185,6 +185,22 @@
             android:layout_height="10dp"
             android:background="#c0c0c0" />
 
+        <org.eazegraph.lib.charts.PieChart
+            android:id="@+id/piechart"
+            android:layout_width="386dp"
+            android:layout_height="505dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_weight="1"
+            android:padding="6dp"
+            app:egLegendTextSize="8sp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="#c0c0c0" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
