--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,6 @@
         <TableRow
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -85,38 +84,6 @@
                 android:textSize="20dp" />
         </TableRow>
 
-<!--        <TableRow>-->
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_column="1"-->
-<!--                android:textSize="20dp"-->
-<!--                android:text="Basis Food/Month" />-->
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_column="2"-->
-<!--                android:textSize="20dp" />-->
-<!--        </TableRow>-->
-
-<!--        <TableRow-->
-<!--            android:layout_width="fill_parent"-->
-<!--            android:layout_height="fill_parent">-->
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_column="1"-->
-<!--                android:textSize="20dp"-->
-<!--                android:text="Reserve Food/Month" />-->
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_column="2"-->
-<!--                android:textSize="20dp" />-->
-<!--        </TableRow>-->
-
         <TableRow>
             <TextView
                 android:layout_width="wrap_content"
@@ -133,51 +100,6 @@
                 android:layout_column="2"
                 android:textSize="20dp" />
         </TableRow>
-
-<!--        <TableRow>-->
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_column="1"-->
-<!--                android:textSize="20dp"-->
-<!--                android:text="Reserve Ø Fod/Day" />-->
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_column="2"-->
-<!--                android:textSize="20dp" />-->
-<!--        </TableRow>-->
-
-<!--        <TableRow>-->
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_column="1"-->
-<!--                android:textSize="20dp"-->
-<!--                android:text="Food (Beg. month)" />-->
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_column="2"-->
-<!--                android:textSize="20dp" />-->
-<!--        </TableRow>-->
-
-<!--        <TableRow>-->
-<!--            <TextView-->
-<!--                android:layout_width="137dp"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_column="1"-->
-<!--                android:textSize="20dp"-->
-<!--                android:text="Food (Beg. year)" />-->
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_column="2"-->
-<!--                android:textSize="20dp" />-->
-<!--        </TableRow>-->
 
         <!--From here new TableLayout-->
         <View
@@ -265,15 +187,6 @@
                 android:layout_height="wrap_content"
                 android:background="@android:drawable/btn_dropdown"
                 android:spinnerMode="dropdown"/>
-
-<!--            <EditText-->
-<!--                android:id="@+id/editTextPerson"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_column="2"-->
-<!--                android:hint="First name"-->
-<!--                android:textSize="20dp"-->
-<!--                android:inputType="text" />-->
         </TableRow>
 
         <TableRow>
@@ -290,21 +203,11 @@
                 android:layout_height="wrap_content"
                 android:background="@android:drawable/btn_dropdown"
                 android:spinnerMode="dropdown"/>
-
-<!--            <EditText-->
-<!--                android:id="@+id/editTextLocation"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_column="2"-->
-<!--                android:hint="Location"-->
-<!--                android:textSize="20dp"-->
-<!--                android:inputType="text" />-->
         </TableRow>
 
         <TableRow
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -325,21 +228,6 @@
         <TableRow
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
-
-<!--            <FrameLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1">
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/deleteButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    app:srcCompat="@drawable/ic_baseline_delete_24" />
-            </FrameLayout>-->
-
             <FrameLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -349,9 +237,22 @@
                     android:id="@+id/addButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:layout_gravity="left"
                     app:srcCompat="@drawable/ic_baseline_add_24" />
+
+                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                    android:id="@+id/listButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_margin="16dp"
+                    android:text="list"
+                    app:icon="@drawable/ic_baseline_add_24" />
             </FrameLayout>
         </TableRow>
     </TableLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
+<!--<ListView-->
+<!--android:id="@+id/list_view"-->
+<!--android:layout_width="wrap_content"-->
+<!--android:layout_height="wrap_content" />-->
