* introducing BarChartAllMonths * extending menu * list button shall display all entries in MainActivity * new apk generated

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".BarAllMonthsChart">
     <!--Swipe Refresh Layout -->
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refreshLayout"
@@ -255,9 +255,10 @@
 
                     <com.google.android.material.floatingactionbutton.FloatingActionButton
                         android:id="@+id/addButton"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
+                        android:layout_margin="16dp"
                         android:enabled="false"
                         app:srcCompat="@drawable/ic_baseline_add_24" />
 
@@ -267,7 +268,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
                         android:layout_margin="16dp"
-                        android:text="list"
+                        android:text="Overview current month"
                         app:icon="@drawable/ic_baseline_add_24" />
                 </FrameLayout>
             </TableRow>
