--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -151,7 +151,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_column="2"
-                    android:text="0"
+                    android:text="@string/zero"
                     android:textSize="20dp"
                     android:inputType="numberDecimal" />
             </TableRow>
@@ -169,7 +169,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_column="2"
-                    android:text="0"
+                    android:text="@string/zero"
                     android:textSize="20dp"
                     android:inputType="numberDecimal" />
             </TableRow>
