--- a/app/src/main/res/menu/menu_chart.xml
+++ b/app/src/main/res/menu/menu_chart.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="at.co.netconsulting.balancesheet.BarChartActivity">
+    tools:context="at.co.netconsulting.balancesheet.ChartActivity">
 
 <!--    <item
         android:id="@+id/action_settings"
