--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,31 +1,86 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
+
+    <!-- Professional Financial Balance Scale Icon -->
+
+    <!-- Scale vertical post -->
     <path
-        android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:startY="49.59793"
-                android:startX="42.9492"
-                android:endY="92.4963"
-                android:endX="85.84757"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+        android:pathData="M54,35L54,75"
+        android:strokeColor="#FFD700"
+        android:strokeWidth="3"
+        android:strokeLineCap="round"/>
+
+    <!-- Scale horizontal beam -->
     <path
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
+        android:pathData="M30,40L78,40"
+        android:strokeColor="#FFD700"
+        android:strokeWidth="3"
+        android:strokeLineCap="round"/>
+
+    <!-- Left scale pan (elliptical shape using path) -->
+    <path
+        android:pathData="M22,50C22,47 28,47 38,47C44,47 46,47 46,50C46,53 44,53 38,53C28,53 22,53 22,50Z"
+        android:fillColor="#40FFD700"
+        android:strokeColor="#FFD700"
+        android:strokeWidth="1"/>
+
+    <!-- Right scale pan (elliptical shape using path) -->
+    <path
+        android:pathData="M62,50C62,47 68,47 78,47C84,47 86,47 86,50C86,53 84,53 78,53C68,53 62,53 62,50Z"
+        android:fillColor="#40FFD700"
+        android:strokeColor="#FFD700"
+        android:strokeWidth="1"/>
+
+    <!-- Left chain -->
+    <path
+        android:pathData="M34,40L34,47"
+        android:strokeColor="#FFD700"
+        android:strokeWidth="1"/>
+
+    <!-- Right chain -->
+    <path
+        android:pathData="M74,40L74,47"
+        android:strokeColor="#FFD700"
+        android:strokeWidth="1"/>
+
+    <!-- Central pivot point (circle using path) -->
+    <path
+        android:pathData="M52,40C52,38.9 52.9,38 54,38C55.1,38 56,38.9 56,40C56,41.1 55.1,42 54,42C52.9,42 52,41.1 52,40Z"
+        android:fillColor="#FFD700"/>
+
+    <!-- Base platform -->
+    <path
+        android:pathData="M48,75L60,75L60,78L48,78Z"
+        android:fillColor="#FFD700"/>
+
+    <!-- Dollar symbol on left -->
+    <path
+        android:pathData="M32,47L32,53M29,49L35,49M29,51L35,51"
+        android:strokeColor="#FFD700"
+        android:strokeWidth="1.2"
+        android:strokeLineCap="round"/>
+
+    <!-- Euro symbol on right -->
+    <path
+        android:pathData="M78,47C76,47 74,48 74,50C74,52 76,53 78,53M72,49L76,49M72,51L76,51"
+        android:strokeColor="#FFD700"
+        android:strokeWidth="1.2"
+        android:strokeLineCap="round"/>
+
+    <!-- Decorative chart elements -->
+    <path
+        android:pathData="M18,25L22,20L26,23L30,18"
+        android:strokeColor="#40FFD700"
         android:strokeWidth="1"
-        android:strokeColor="#00000000"/>
+        android:strokeLineCap="round"/>
+
+    <path
+        android:pathData="M78,25L82,20L86,23L90,18"
+        android:strokeColor="#40FFD700"
+        android:strokeWidth="1"
+        android:strokeLineCap="round"/>
+
 </vector>
